--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 /* Application-wide Styles */
 h1 {
-    color: #369;
+    color: rgb(33, 77, 121);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
   }
@@ -10,6 +10,7 @@ h1 {
     font-weight: lighter;
   }
   body {
+    background-color: #1a723e;
     margin: 2em;
   }
   body, input[type="text"], button {
@@ -30,7 +31,7 @@ h1 {
   }
   button:hover {
     background-color: black;
-    color: white;
+    color: rgb(158, 47, 47);
   }
   button:disabled {
     background-color: #eee;
