--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <body>
     <h1>{{title}}</h1>
-    <app-heroes></app-heroes>    
+    <app-heroes></app-heroes>  
+    <app-messages></app-messages>  
 </body>
